--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "algorithm": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp"
     }
 }
